--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>This is a paragraph</p>
+<!DOCTYPE html>
+<html lang='en'>
+<head>
+	<meta charset="utf-8">
+    <title>HTML Structure</title>
+</head>
+<body>
+	<h1>Hongfei Yang</h1>
+	<div>Thank you for visting my website!</div>
+  </body>
+</html>
