--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body>
 	<h1>Hongfei Yang</h1>
 	<div>Thank you for visting my website!</div>
+	<p>
+		About Me - My name is Hongfei Yang, I am a passionate future Data Scientist/Engineer. I have industry experience in working as a Data Scientist in an Ad-Tech comapny in Seattle. The company is a SaaS company which provides automated and AI Advertising Services on Facebook. The company's clients include top real-estate companies, $40 Billion e-commerce website, etc. My responsibilities there mainly include Machine Learning Modeling and Ad-hoc Data Analysis. Currently, I am pursuing my Master degree in Data Science/Business Analytics at the Seattle University with a 3.89 GPA. I also hold a degree in Math from the University of Washington with a 3.73 GPA. My curriculums focus in Machine Learning, Statistics, Programming, Big Data Analytics, Data Visualization and Communication etc.
+	</p>
   </body>
 </html>
