--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="utf-8">
     <title>HTML Structure</title>
     <style>
+
+    body {background-color: FloralWhite;}
     
     /*container holding the text and the image*/
     .container {
@@ -31,18 +33,22 @@
     	opacity: 0.7;
     }
 
-    /*about me block*/
-    .about-me {
-    	font-family : Helvetica, serif;
+    /*content block*/
+    .content {
+    	font-family : "Verdana", serif;
     	text-align: justify;
     	text-align-last: center;
     	line-height: 20px;
     }
 
-    /*about me title*/
-    .about-me-title {
-    	font-size: 120%;
-    }
+    /*about me content*/
+
+    /*.about-me-content {
+    	height: 100px;
+    	width: 1200px;
+    }*/
+
+
 	</style>
 </head>
 
@@ -52,9 +58,18 @@
 		<div class="centered"><strong>Hi, I am Derek. A Data Lover and Engineer.</strong></div>
 	</div>
 
-	<div class="about-me">
+	<div class="content">
+
 		<p class="about-me-title"><Strong>About Me</Strong></p>
-		<p class="about-me-content">My name is Hongfei Yang, I am a passionate future Data Scientist/Engineer. I have industry experience in working as a Data Scientist in an Ad-Tech comapny in Seattle. The company is a SaaS company which provides automated and AI Advertising Services on Facebook. The company's clients include top real-estate companies, $40 Billion e-commerce website, etc. My responsibilities there mainly include <strong>Machine Learning Modeling</strong> and <strong>Ad-hoc Data Analysis</strong>. Currently, I am pursuing my Master degree in Data Science/Business Analytics at the Seattle University with a <strong>3.89</strong> GPA. I also hold a degree in Math from the University of Washington with a <strong>3.73</strong> GPA. My curriculums focus in Machine Learning, Statistics, Programming, Big Data Analytics, Data Visualization and Communication etc.</p>
+		<p class="about-me-content">I am Derek, a passionate future Data Scientist/Engineer. I have industry experience in working as a Data Scientist at an Ad-Tech comapny in Seattle. My responsibilities there mainly include performing Machine Learning Modeling for online advertising and conducting Ad-hoc Data Analysis for internal/external stakeholders. On the other hand, I also have a lot of project experinece in leveraging data to solve real-world business problems for companies such as the <i>International Hotel Group</i>, <i>Zillow</i> and <i>Microsoft</i> etc. Currently, I am pursuing my Master degree in Data Science/Business Analytics at the Seattle University with a 3.89 GPA. I also hold a degree in Math from the University of Washington with a 3.73 GPA. My curriculums focus in Machine Learning, Statistics, Programming, Big Data Analytics and Data Visualization etc.</p> 
+
+		<p><Strong>Skills</Strong></p>
+		<p class="skills"><em>Languages</em>: R, Python, Java, SQL, HTML, CSS<br><em>Tools</em>: Tableau, Power BI, MongoDB, Google Analytics, Git & Github<br><em>Big Data Framework</em>: MapReduce, Hadoop, Spark<br><em>OS</em>: Linux, Mac</p>
+
+		<p><Strong>Selected Projects</Strong></p>
+
 	</div>
+  
+
   </body>
 </html>
