made the menu align

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             color: white;
             background: url('Background.png');
             background-size: cover;
-            padding: 200px;
+            padding: 210px;
             font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-            margin: 0px 0px 50px 0px;
+            margin: 0px 0px 70px 0px;
         }
         h1 {
             font-size: 55px;
@@ -19,14 +19,14 @@
         }
         ul {
             font-size: 18px;
+            padding: 10px;
         }
         .white {
             color:white;
         }
         li {
             font-weight: bold;
-            list-style-type: none;
-            margin: 10px 15px 10px 15px;
+            padding: 10px 20px 10px 20px;
             display: inline;
 
         }
